# de-3-4-5-bigquery-partitioning-gcp-buckets-dbt-bruin-mcp

./: .gitignore  README.md  duckdb.db  load_yellow_taxi_data.py  pyproject.toml  table-defintion.md  verify_data.py
taxi_rides_ny/: table-defintion.md  taxi_rides_ny.yml
taxi_rides_ny/models/staging/: sources.yml
